--- a/src/components/buttons/buttons-mobile.css
+++ b/src/components/buttons/buttons-mobile.css
@@ -10,8 +10,8 @@
   }
 
   .left-column {
-    top: 43%;
-    left: 4%;
+    top: 35%;
+    left: 8vw;
   }
 
   .right-column {
@@ -22,9 +22,59 @@
     transform: scale(1);
   }
 
+  @media (max-width: 760px) {
+    .left-column {
+      top: 43%;
+      left: 1%;
+      max-height: 49vh;
+      overflow-y: auto;
+      padding: 10px;
+      border: 1px solid #FF4F00;
+    }
+}
+
   @media (max-height: 750px) {
     .left-column {
       top: 50%;
+    }
+  }
+
+  @media (max-width: 385px) {
+    .left-column {
+      left: 3%;
+      padding: 0;
+    }
+  }
+
+   @media (max-height: 645px) {
+    .left-column {
+      top: unset;
+      bottom: 3%;
+      max-height: 38vh;
+    }
+  }
+
+   @media (max-height: 555px) {
+    .left-column {
+      max-height: 30vh;
+    }
+  } 
+
+  @media (max-height: 485px) {
+    .left-column {
+      max-height: 64px;
+    }
+  }
+
+  @media (max-height: 400px) {
+    .left-column {
+      display: none;
+    }
+  }
+
+  @media (max-width: 340px) {
+    .left-column {
+      display: none;
     }
   }
 }
