--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -17,11 +17,33 @@
   margin-bottom: 20px;
 }
 
+.post-bottom-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  border: 0px solid white;
+}
+
 .blog-list article time {
   display: block;
   font-size: 0.9rem;
   margin-top: 5rem;
   margin-bottom: 10rem;
+}
+
+.comment-icon {
+  display: block;
+  margin-top: 5rem;
+  margin-bottom: 10rem;
+  margin-right: 5px;
+}
+
+.new-position {
+  position: absolute !important;
+  margin-top: 2.5rem !important;
+  margin-right: 0 !important;
+  right: 95% !important;
 }
 
 .post-title a {
