--- a/src/components/aside/aside-mobile.css
+++ b/src/components/aside/aside-mobile.css
@@ -1,3 +1,13 @@
+.full-name {
+  font-size: inherit;
+  display: inline;
+}
+
+.short-name {
+  font-size: inherit;
+  display: none;
+}
+
 @media (max-width: 760px) {
   aside {
     flex: 0.29;
@@ -14,5 +24,14 @@
 
   aside h2 {
     margin-bottom: 6px;
+  }
+}
+
+@media (max-width: 368px) {
+  .full-name {
+    display: none;
+  }
+  .short-name {
+    display: inline;
   }
 }
