--- a/src/pages/home/home-mobile.css
+++ b/src/pages/home/home-mobile.css
@@ -16,17 +16,7 @@
   }
 
   .media-gallery {
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-    max-height: 320px;
-    margin-top: 1rem;
-    gap: 15px;
-    background-color: #121212;
-    border-radius: 4px;
-    transition: background-color 0.1s;
+    scroll-snap-type: none;
   }
 
   .media-gallery:hover {
@@ -45,5 +35,18 @@
     height: auto;
     border-radius: 4px;
     object-fit: contain;
+  }
+
+  @media (max-width: 460px) {
+    .youtube-placeholder div {
+      transform: translate(-50%, -45%);
+      font-size: 2rem;
+      padding: 0 15px;
+      border-radius: 50%;
+    }
+
+    .youtube-placeholder div span {
+      display: none;
+    }
   }
 }
