--- a/public/chattable.css
+++ b/public/chattable.css
@@ -23,7 +23,7 @@
  background-image: url(/media/verified.png);
  background-size: 100% 100%;
  margin-left: 5px;
- filter: invert(100%) drop-shadow(0 0 2px #000);
+ filter: invert(100%);
 }
 
 #scrollToBottom {
@@ -58,6 +58,7 @@
    font-size: 10pt;
    margin: 5px;
    margin-top: 7px;
+   cursor: default;
    display: inline-block;
    position: relative;
    min-width: 25vw;
@@ -92,6 +93,10 @@
   font-size: 8pt;
   font-weight: bold;
   color: #ff4f00;
+}
+
+#timestamp {
+  display: none;
 }
 
 .sent {
