--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,25 @@ body {
   margin: 0;
 }
 
+html::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: blur(5px) brightness(0.4);
+  transition: background-image 0.5s ease-in-out;
+}
+
+html::before {
+  background-image: var(--bg-image);
+}
+
 html {
   display: flex;
   justify-content: center;
@@ -70,8 +89,16 @@ a:hover::after {
 
 @media only screen and (min-width: 901px) {
   ::selection {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 1);
     color: #ff4f00;
+  }
+
+  .website-link::selection {
+    color: blanchedalmond;
+  }
+
+  a:hover::selection {
+    color: white;
   }
 }
 
