--- a/src/components/buttons/buttons-mobile.css
+++ b/src/components/buttons/buttons-mobile.css
@@ -29,7 +29,10 @@
       max-height: 49vh;
       overflow-y: auto;
       padding: 10px;
-      background-color: #232323;
+      background: rgba(0, 0, 0, 0.5);
+      border: 1.75px solid rgba(26, 26, 26, 0.25);
+      backdrop-filter: blur(5px) saturate(1.5);
+      -webkit-backdrop-filter: blur(5px) saturate(1.5);
     }
 }
 
