--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -1,21 +1,36 @@
 .toggle-animation-btn {
   position: fixed;
   top: 1rem;
-  right: 2rem;
+  right: 1.3rem;
   z-index: 9999;
-  background-color: #111;
+  background: rgba(0, 0, 0, 0.5);
+  text-align: center;
   color: white;
-  border: 2px solid #ff4f00;
-  border-radius: 4px;
+  border: 1.75px solid rgba(26, 26, 26, 0.25);
+  border-radius: 0.75em;
   padding: 0.3rem 0.6rem;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   cursor: pointer;
   opacity: 0.6;
-  transition: opacity 0.2s;
+  transition: all 0.1s linear;
+  text-shadow: 1px 1.5px 3px black;
+  backdrop-filter: blur(10px) saturate(1.5);
+  -webkit-backdrop-filter: blur(10px) saturate(1.5);
 }
 
 .toggle-animation-btn:hover {
   opacity: 1;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(20px) saturate(0);
+  -webkit-backdrop-filter: blur(20px) saturate(0);
+  border: 1.75px solid rgba(255, 79, 0, 0.75);
+  border-radius: 0.5em;
+}
+
+.website-link {
+  font-size: 1.15rem;
+  color: #ff4f00;
+  text-decoration: none;
 }
 
 .buttons-background {
