--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -56,3 +56,14 @@
 .rss:hover .socials-icons {
   opacity: 0.8;
 }
+
+.site-button {
+  image-rendering: pixelated;
+  margin-left: auto;
+  margin-right: 2%;
+  margin-top: 0.7%;
+}
+
+.site-button-mobile {
+  display: none;
+}
