--- a/src/pages/chat/chat.css
+++ b/src/pages/chat/chat.css
@@ -14,53 +14,42 @@
   margin-bottom: 4rem;
 }
 
-.name-input {
+.name-input, .comment-input {
   padding: 0.5rem;
   padding-left: 0.8rem;
-  border: 1px solid #ff51006b;
-  border-radius: 4px;
-  background: #000;
+  border: 2px solid rgba(26, 26, 26, 0.25);
+  border-radius: 0.5em;
+  background: rgba(0, 0, 0, 0.3);
   color: white;
   font-size: 1rem;
   outline: none;
-  transition: border 0.2s;
+  transition: all 0.1s linear;
+  text-shadow: 1px 1.5px 3px black;
+  backdrop-filter: blur(10px) saturate(1.5);
+  -webkit-backdrop-filter: blur(10px) saturate(1.5);
 }
 
-.name-input:hover {
-  border: 1px solid #ff5100a4;
+.name-input:hover, .comment-input:hover {
+  border: 2px solid rgba(255, 79, 0, 0.25);
 }
 
-.name-input:focus {
-  border: 1px solid #ff5100a4;
+.name-input:focus, .comment-input:focus {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(20px) saturate(0);
+  -webkit-backdrop-filter: blur(20px) saturate(0);
+  border: 2px solid rgba(255, 79, 0, 0.5);
 }
 
 .comment-input {
-  padding: 0.5rem;
-  padding-left: 0.8rem;
-  border: 1px solid #ff51006b;
-  border-radius: 4px;
-  background: #000;
-  color: white;
-  font-size: 1rem;
   resize: vertical;
-  outline: none;
-  transition: border 0.2s;
   min-height: 25px;
   max-height: 150px;
-}
-
-.comment-input:hover {
-  border: 1px solid #ff51008a;
-}
-
-.comment-input:focus {
-  border: 1px solid #ff4f00;
 }
 
 .submit-button {
   height: 30px;
   width: 100%;
-  background-color: #ff4f00;
+  background: rgba(255, 79, 0, 0.75);
   color: white;
   border: none;
   border-radius: 4px;
@@ -68,14 +57,17 @@
   cursor: pointer;
   font-weight: bold;
   transition: all 0.25s;
+  backdrop-filter: blur(10px) saturate(1.5);
+  -webkit-backdrop-filter: blur(10px) saturate(1.5);
 }
 
 .submit-button:hover {
-  opacity: 0.65;
+  background: rgba(255, 79, 0, 1);
 }
 
 .submit-button:active {
   transform: scale(0.95);
+  background: rgba(0, 0, 0, 1);
 }
 
 .comment-content {
@@ -118,7 +110,7 @@
 .chattable-iframe {
   width: 100%;
   min-height: 70vh;
-  background-color: rgba(35,35, 35, 1);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-height: 730px) {
